feat: iterate on GPR

--- a/blog_entries/2023-07-01-survival_analysis.ipynb
+++ b/blog_entries/2023-07-01-survival_analysis.ipynb
@@ -9,7 +9,10 @@
     "\n",
     "Survival analysis\n",
     "\n",
-    "\n",
+    "- What is survival analysis?\n",
+    "- Re-creating McElreath's\n",
+    "- Austin Rochford's\n",
+    "- \n",
     "- How can we used mixed effects modeling?\n",
     "\n",
     "- Pymc survival analysis [here](https://www.pymc.io/projects/docs/en/v3/pymc-examples/examples/survival_analysis/bayes_param_survival_pymc3.html)\n",
